--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
         </div>
         <!--  -->
-        <div class="img-icon">
+        <div class="image-icon">
             <div class="img-icon-1">
                 <img src="Images/hotel.png" alt="" width="100px" height="100px">
                 <h1>Handpicked Hotels</h1>
@@ -112,9 +112,10 @@
                 <h1>World Class Service</h1>
                 <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
             </div>
-            <!-- end -->
-            <!--  -->
         </div>
+            <!-- end -->
+
+            <!--  -->
         <div class="img-icon-3">
             <img src="Images/monybag.png" alt="" width="100px" height="100px">
             <h1>Handpicked Hotels</h1>
